# routes/index.js
@@ -1,7 +1,18 @@
+const passport = require('passport');
+
 const router = require('express').Router();
 
 router.use('/books', require('./books'));
 
 router.use('/authors', require('./authors'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => { });
+
+router.get('/logout', function (req, res) {
+    req.logout(function (err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
